Bug 1340582 - Handle shared memory allocation failure. r=jchen, a=gchang

MozReview-Commit-ID: BMObK2OU8FV